# image-editor

./: .gitignore  README.md  create_main_app.py  dockerfile  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: b0a37de1557c_create_table.py
app/: config.py
app/api/v1/: __init__.py
app/api/v1/api_v1/: __init__.py  auth.py  fastapi_users.py  users.py
app/api/v1/api_v1/convertimage/: view.py
app/api/v1/dependancy/: backend.py  dependancy_user_manager.py  strategy.py  user.py
app/api/v1/mixin/: user_id.py
app/cert/: private_key.pem  public_key.pem
app/core/auth/: user_manager.py
app/middlewaries/: cors.py
app/models/: base.py  db_helper.py  user.py
app/services/: image.py
app/utils/: camel_case.py
front/: package-lock.json  package.json
front/public/: index.html
front/src/: index.js
front/src/components/: App.js
front/src/components/auth/: ForgotPasswordForm.js  LoginForm.js  RegisterForm.js
front/src/components/dashboard/: ImageOperations.js  ImageUpload.js  UserProfile.js  UserSidebar.js
front/src/components/layout/: Layout.js  Navbar.js
front/src/components/ui/: Loging.js
front/src/context/: AuthContext.js
front/src/pages/: DashboardPage.js  ForgotPasswordPage.js  LoginPage.js  RegisterPage.js
front/src/public/: index.html
front/src/services/: api.js
front/src/utils/: contens.js
